--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                 <img draggable="false" class = "mainCardImage" src = "images/oceanStatsScreen.jpg">
                 <div class = "pricingSection">
                 <h4> Simple Ocean Stats </h4>
-                <h4 class = "mainCardSubtitle"> Versa / Versa Lite </h4>
-                <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3346" target="_blank"> <div class = "pricingButton"> $1.49</div> </a>
+                <h4 class = "mainCardSubtitle"> Versa / Versa Lite / Ionic </h4>
+                <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3346" target="_blank"> <div class = "pricingButton"> $1.99</div> </a>
                 </div>
             </div>
 
@@ -179,8 +179,8 @@
                 <img draggable="false" class = "mainCardImage" src = "images/sunsetStatsScreen.jpg">
                 <div class = "pricingSection">
                 <h4> Simple Sunset Stats </h4>
-                <h4 class = "mainCardSubtitle"> Versa / Versa Lite </h4>
-                <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3433" target="_blank"> <div class = "pricingButton"> $1.49</div> </a>
+                <h4 class = "mainCardSubtitle"> Versa / Versa Lite / Ionic</h4>
+                <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3433" target="_blank"> <div class = "pricingButton"> $1.99</div> </a>
                 </div>
             </div>
 
