--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
                 <img draggable="false" class = "mainCardImage" id = "allBundle" src = "images/allBundleScreen.jpg">
                 <div class = "pricingSection">
-                <h4> All Clockfaces (10+) </h4>
+                <h4> All Clockfaces (11+) </h4>
                 <h4 class = "mainCardSubtitle"> Versa / Versa Lite </h4>
                 <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target="_blank" ><div class = "pricingButton"> $12.00 </div> </a>
                 </div>
@@ -259,6 +259,20 @@
                 <h4> Circles </h4>
                 <h4 class = "mainCardSubtitle"> Versa / Versa Lite </h4>
                 <div class = "pricingButton"> $1.49</div>
+                </div>
+            </div>
+
+            <div class = "mainCardSoon">
+
+                <div class = "markedButton">
+                    Soon
+                </div>
+
+                <img draggable="false" class = "mainCardImage" src = "images/triangleScreen.jpg">
+                <div class = "pricingSection">
+                <h4> Triangles </h4>
+                <h4 class = "mainCardSubtitle"> Versa / Versa Lite / Ionic</h4>
+                <div class = "pricingButton"> $1.99</div>
                 </div>
             </div>
 
