--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
                 <img draggable="false" class = "mainCardImage" src = "images/circlesScreen.jpg">
                 <div class = "pricingSection">
                 <h4> Circles </h4>
-                <h4 class = "mainCardSubtitle"> Versa / Versa Lite </h4>
-                <div class = "pricingButton"> $1.49</div>
+                <h4 class = "mainCardSubtitle"> Versa / Versa Lite / Ionic </h4>
+                <div class = "pricingButton"> $1.99</div>
                 </div>
             </div>
 
