--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
                 <img draggable="false" class = "mainCardImage" src = "images/frizzyScreen.jpg">
                 <div class = "pricingSection">
                 <h4> Pink frizzy </h4>
-                <h4 class = "mainCardSubtitle"> Versa / Versa Lite </h4>
-                <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3345" target="_blank"><div class = "pricingButton"> $1.49</div> </a>
+                <h4 class = "mainCardSubtitle"> Versa / Versa Lite / Ionic </h4>
+                <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3345" target="_blank"><div class = "pricingButton"> $1.99</div> </a>
                 </div>
             </div>
 
