--- a/index.html
+++ b/index.html
@@ -195,10 +195,6 @@
 
             <div class = "mainCard">
 
-                <div class = "markedButton">
-                    New
-                </div>
-
                 <img draggable="false" class = "mainCardImage" src = "images/nyStatsScreen.jpg">
                 <div class = "pricingSection">
                 <h4> Simple NY Stats </h4>
@@ -207,17 +203,17 @@
                 </div> </a>
             </div>
 
-            <div class = "mainCardSoon">
+            <div class = "mainCard">
 
                 <div class = "markedButton">
-                    Soon
+                    New
                 </div>
 
                 <img draggable="false" class = "mainCardImage" src = "images/torontoScreen.jpg">
                 <div class = "pricingSection">
                 <h4> Toronto Stats </h4>
                 <h4 class = "mainCardSubtitle"> Versa / Versa Lite </h4>
-                <div class = "pricingButton"> $1.49</div>
+                <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3793" target = "_blank"> <div class = "pricingButton"> $1.49</div> </a>
                 </div>
             </div>
 
