--- a/index.html
+++ b/index.html
@@ -418,10 +418,10 @@
                             <div class = "infoSection">
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3353" target = "_blank" draggable="false"><button class = "cardButton"> $1.49 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3353" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
 
                         </div>
                     </div>
