--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
 
                                             <!-- NavBar Section -->
-
     <div class = "navbarSection">
 
             <input type="checkbox" id = "checkbox">
@@ -46,6 +45,8 @@
 
         </div>
 
+<div class = "wrapper">
+
 
                                 <!-- Introduction Section -->
 
@@ -64,12 +65,13 @@
 
     </div>
 
-    <div class = "dividerSection">
-        <div class = "divider"></div>
-        <h2 class = "advTitle">  Enjoy your clockface with these advantages </h2>
     </div>
 
-    </div>
+
+
+    <div class = "mainSection">
+        <div class = "divider"></div>
+        <h2 class = "advTitle">  Enjoy your clockface with these advantages </h2>
 
 
     <div class = "advantageCardSection">
@@ -101,6 +103,7 @@
 
 
     </div>
+  </div>
 
                                         <!-- Product Section -->
 
@@ -626,11 +629,8 @@
     <div class = "footer">
 
 
-
     </div>
-
-
-
+</div>
 </body>
 
 </html>
