--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 25% </div>
+                <div class = "markedButton"> Save 34% </div>
 
                 <div class = "upperCard">
 
@@ -197,6 +197,32 @@
                                 </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3858" target = "_blank" draggable="false"><button class = "cardButton"> $4.00 </button></a>
+
+                        </div>
+
+                </div>
+
+                <div class = "mainCardBundle">
+
+                        <div class = "upperCard">
+
+                            <div class = "slideButtonLeft" onclick="getBundleName(shapesBundle,this)"><i class="fas fa-chevron-left"></i></div>
+                            <div class = "slideButtonRight" onclick="getBundleName(shapesBundle,this)"><i class="fas fa-chevron-right"></i></div>
+
+                            <img class = "cardImage" src = "images/shapesBundleScreen.jpg" draggable="false" id = "shapesBundle" draggable="false">
+
+                        </div>
+                        <div class = "lowerCard">
+
+                            <h3 class = "cardTitle"> Shapes Bundle (3+) </h3>
+
+                                <div class = "infoSection">
+                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                                <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                                </div>
+
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $4.00 </button></a>
 
                         </div>
 
