--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
 
                     </div>
                 </div>
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                        <div class = "markedButton"> Soon </div>
+                        <div class = "markedButton"> New </div>
 
                         <div class = "upperCard">
 
@@ -316,7 +316,7 @@
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
                             </div>
 
-                            <button class = "cardButton"> $1.99</button>
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3553" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                         </div>
                     </div>
