--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (12+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (13+) </h3>
 
                         <div class = "infoSection">
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
@@ -146,7 +146,7 @@
                         <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $14.49 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $15.99 </button></a>
 
                 </div>
             </div>
@@ -270,6 +270,30 @@
                     </div>
 
                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3433" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/sidebarScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Sidebar </h3>
+
+                        <div class = "infoSection">
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
 
                     </div>
                 </div>
