--- a/index.html
+++ b/index.html
@@ -141,9 +141,14 @@
                     <h3 class = "cardTitle"> All clockfaces (13+) </h3>
 
                         <div class = "infoSection">
+                          <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                         <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                      </div>
                         </div>
 
                         <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $15.99 </button></a>
@@ -164,11 +169,16 @@
 
                         <h3 class = "cardTitle"> Simple Stats (6+) </h3>
 
-                            <div class = "infoSection">
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
-                            </div>
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                      </div>
+                        </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $8.00 </button></a>
 
@@ -190,11 +200,16 @@
 
                             <h3 class = "cardTitle"> City Bundle (3+) </h3>
 
-                                <div class = "infoSection">
-                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                                <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
-                                </div>
+                            <div class = "infoSection">
+                              <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                            <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                          </div>
+                            </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3858" target = "_blank" draggable="false"><button class = "cardButton"> $4.00 </button></a>
 
@@ -216,11 +231,16 @@
 
                             <h3 class = "cardTitle"> Shapes Bundle (3+) </h3>
 
-                                <div class = "infoSection">
-                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
-                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                                <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
-                                </div>
+                            <div class = "infoSection">
+                              <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                          </div>
+                            </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $4.00 </button></a>
 
@@ -242,9 +262,14 @@
                     <h3 class = "cardTitle"> Simple Ocean Stats </h3>
 
                     <div class = "infoSection">
+                      <div>
                     <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                    </div>
+                    <div>
                     <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                     <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                  </div>
                     </div>
 
                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3346" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
@@ -264,9 +289,14 @@
                     <h3 class = "cardTitle"> Simple Sunset Stats </h3>
 
                     <div class = "infoSection">
+                      <div>
                     <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                    <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                    </div>
+                    <div>
                     <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                     <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                  </div>
                     </div>
 
                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3433" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
@@ -288,9 +318,14 @@
                         <h3 class = "cardTitle"> Sidebar </h3>
 
                         <div class = "infoSection">
+                          <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
                         </div>
 
                        <button class = "cardButton"> $1.99</button>
@@ -312,9 +347,14 @@
                         <h3 class = "cardTitle"> Triangles </h3>
 
                         <div class = "infoSection">
+                          <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
                         </div>
 
                        <button class = "cardButton"> $1.99</button>
@@ -335,9 +375,14 @@
                             <h3 class = "cardTitle"> Circles </h3>
 
                             <div class = "infoSection">
+                              <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                          </div>
                             </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3553" target="_blank"><button class = "cardButton"> $1.99</button></a>
@@ -359,9 +404,14 @@
                                 <h3 class = "cardTitle"> Cube </h3>
 
                                 <div class = "infoSection">
+                                  <div>
                                 <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                                </div>
+                                <div>
                                 <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                                 <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                              </div>
                                 </div>
 
                                 <button class = "cardButton"> $1.99</button>
@@ -381,9 +431,14 @@
                             <h3 class = "cardTitle"> Pink Frizzy </h3>
 
                             <div class = "infoSection">
+                              <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                          </div>
                             </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3345" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
@@ -403,9 +458,14 @@
                             <h3 class = "cardTitle"> Simple Summer Stats </h3>
 
                             <div class = "infoSection">
+                              <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                             <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                          </div>
                             </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3566" target = "_blank" draggable="false"><button class = "cardButton"> $1.49 </button></a>
@@ -425,9 +485,14 @@
                             <h3 class = "cardTitle"> Simple NY Stats </h3>
 
                             <div class = "infoSection">
+                              <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                             <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                          </div>
                             </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3705" target = "_blank" draggable="false"><button class = "cardButton"> $1.49 </button></a>
@@ -449,9 +514,14 @@
                             <h3 class = "cardTitle"> Toronto Stats </h3>
 
                             <div class = "infoSection">
+                              <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                             <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                          </div>
                             </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3793" target = "_blank" draggable="false"><button class = "cardButton"> $1.49 </button></a>
@@ -471,9 +541,14 @@
                             <h3 class = "cardTitle"> Simple London Stats </h3>
 
                             <div class = "infoSection">
+                              <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                             <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                          </div>
                             </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3354" target = "_blank" draggable="false"><button class = "cardButton"> $1.49 </button></a>
@@ -493,10 +568,15 @@
                             <h3 class = "cardTitle"> Simple Mountain Stats </h3>
 
                             <div class = "infoSection">
+                              <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
-                        </div>
+                          </div>
+                            </div>
 
                         <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3353" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
 
@@ -515,10 +595,15 @@
                             <h3 class = "cardTitle"> Deep Forest </h3>
 
                             <div class = "infoSection">
+                              <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
-                        </div>
+                          </div>
+                            </div>
 
                         <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3317" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
 
@@ -536,10 +621,15 @@
                             <h3 class = "cardTitle"> Paris Theme </h3>
 
                             <div class = "infoSection">
+                              <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
                             <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
-                        </div>
+                          </div>
+                            </div>
 
                         <a href = "https://gallery.fitbit.com/details/1ad0c505-725f-4845-8f6c-4df7bdc6125e" target = "_blank" draggable="false"><button class = "cardButton"> Free </button></a>
 
