--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 34% </div>
+                <div class = "markedButton"> Save 36% </div>
 
                 <div class = "upperCard">
 
@@ -464,11 +464,11 @@
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
                           </div>
                             </div>
 
-                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3566" target = "_blank" draggable="false"><button class = "cardButton"> $1.49 </button></a>
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3566" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
 
                             </div>
                     </div>
@@ -520,11 +520,11 @@
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
                           </div>
                             </div>
 
-                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3793" target = "_blank" draggable="false"><button class = "cardButton"> $1.49 </button></a>
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3793" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
 
                             </div>
                     </div>
