--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
                     </div>
                 </div>
 
-                <div class = "mainCardSoon">
+                <div class = "mainCard">
 
-                    <div class = "markedButton"> Soon </div>
+                    <div class = "markedButton"> New </div>
 
                     <div class = "upperCard">
 
@@ -362,8 +362,6 @@
                     </div>
                 </div>
                 <div class = "mainCard">
-
-                        <div class = "markedButton"> New </div>
 
                         <div class = "upperCard">
 
@@ -502,8 +500,6 @@
 
                     <div class = "mainCard">
 
-                            <div class = "markedButton"> New </div>
-
                             <div class = "upperCard">
 
                             <img class = "cardImage" src = "images/torontoScreen.jpg" draggable="false">
@@ -557,6 +553,8 @@
                     </div>
 
                     <div class = "mainCard">
+
+                      <div class = "markedButton"> New </div>
 
                         <div class = "upperCard">
 
