--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 36% </div>
+                <div class = "markedButton"> Save 37% </div>
 
                 <div class = "upperCard">
 
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (13+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (14+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -151,7 +151,7 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $15.99 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $16.99 </button></a>
 
                 </div>
             </div>
@@ -243,6 +243,39 @@
                             </div>
 
                             <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $4.00 </button></a>
+
+                        </div>
+
+                </div>
+
+                <div class = "mainCardBundle">
+
+                  <div class = "markedButton"> New </div>
+
+                        <div class = "upperCard">
+
+                            <div class = "slideButtonLeft" onclick="getBundleName(frizzyBundle,this)"><i class="fas fa-chevron-left"></i></div>
+                            <div class = "slideButtonRight" onclick="getBundleName(frizzyBundle,this)"><i class="fas fa-chevron-right"></i></div>
+
+                            <img class = "cardImage" src = "images/frizzyBundleScreen.jpg" draggable="false" id = "frizzyBundle" draggable="false">
+
+                        </div>
+                        <div class = "lowerCard">
+
+                            <h3 class = "cardTitle"> Frizzy Bundle (2+) </h3>
+
+                            <div class = "infoSection">
+                              <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                            </div>
+                            <div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                          </div>
+                            </div>
+
+                            <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3978" target = "_blank" draggable="false"><button class = "cardButton"> $2.49 </button></a>
 
                         </div>
 
@@ -417,6 +450,35 @@
                             </div>
                         </div>
 
+                        <div class = "mainCardSoon">
+
+                            <div class = "markedButton"> Soon </div>
+
+                            <div class = "upperCard">
+
+                                <img class = "cardImage" src = "images/lovingFrizzyScreen.jpg" draggable="false">
+
+                            </div>
+                            <div class = "lowerCard">
+
+                                <h3 class = "cardTitle"> Loving frizzy </h3>
+
+                                <div class = "infoSection">
+                                  <div>
+                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                                </div>
+                                <div>
+                                <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                                <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                              </div>
+                                </div>
+
+                               <button class = "cardButton"> $1.99</button>
+
+                            </div>
+                        </div>
+
                     <div class = "mainCard">
 
                             <div class = "upperCard">
@@ -553,8 +615,6 @@
                     </div>
 
                     <div class = "mainCard">
-
-                      <div class = "markedButton"> New </div>
 
                         <div class = "upperCard">
 
