--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (14+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (15+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -147,7 +147,7 @@
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
                       </div>
                         </div>
 
@@ -176,7 +176,7 @@
                         </div>
                         <div>
                         <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                        <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
                       </div>
                         </div>
 
@@ -207,7 +207,7 @@
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
                           </div>
                             </div>
 
@@ -333,6 +333,35 @@
                     </div>
 
                     <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3433" target = "_blank" draggable="false"><button class = "cardButton"> $1.99 </button></a>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/dividedScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Divided </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
 
                     </div>
                 </div>
@@ -551,7 +580,7 @@
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
                           </div>
                             </div>
 
@@ -605,7 +634,7 @@
                             </div>
                             <div>
                             <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
-                            <div class = "cardInfo"> <i class="fas fa-times"></i> Ionic </div>
+                            <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
                           </div>
                             </div>
 
@@ -714,17 +743,17 @@
 
 
             <div class = "giveawayCardMain">
-                <p class = "giveawayTitle"> Discount Code: Wesbite launch - 1 </p>
+                <p class = "giveawayTitle"> Discount Code: All Clockfaces </p>
                 <i class="fas fa-chevron-up"></i>
             </div>
 
             <div class = "giveawayHidden">
 
-            <p class = "giveawayCardPara"> Our Website is now online! Thank you so much for your support! As a gift, we will give you a discount code, useable with every bundle on this website! But act quickly: this discount code is limited to 5 uses!  </p>
+            <p class = "giveawayCardPara"> Use this discount code when purchasing the "All Clockfaces" bundle to save additional 15%  </p>
 
             <div class = "giveawayInformation">
                 <p class = "informationTitle"> Discount code: </p>
-                <p class = "informationText"> WEBSITEBUNDLECODE  </p>
+                <p class = "informationText"> ALLFACES  </p>
             </div>
             <div class = "giveawayInformation">
                 <p class = "informationTitle"> Discount: </p>
@@ -732,15 +761,15 @@
             </div>
             <div class = "giveawayInformation">
                 <p class = "informationTitle"> Products: </p>
-                <p class = "informationText"> all bundles  </p>
+                <p class = "informationText"> All Clockfaces bundle  </p>
             </div>
             <div class = "giveawayInformation">
                 <p class = "informationTitle"> Max-uses: </p>
-                <p class = "informationText"> 5 </p>
+                <p class = "informationText"> / </p>
             </div>
             <div class = "giveawayInformation">
                     <p class = "informationTitle"> Expires: </p>
-                    <p class = "informationText"> / </p>
+                    <p class = "informationText"> 01/01/20 </p>
             </div>
 
             </div>
@@ -751,33 +780,33 @@
 
 
                     <div class = "giveawayCardMain">
-                        <p class = "giveawayTitle"> Discount Code: Wesbite launch - 2 </p>
+                        <p class = "giveawayTitle"> Discount Code: Instagram </p>
                         <i class="fas fa-chevron-up" id = "giveawayIcon"></i>
                     </div>
 
                     <div class = "giveawayHidden">
 
-                    <p class = "giveawayCardPara"> Our Website is now online! Thank you so much for your support! As a gift, we will give you a discount code, useable with every clockface on this website! But act quickly: this discount code is limited to 10 uses!  </p>
+                    <p class = "giveawayCardPara"> Use this discount code when purchasing the "All Clockfaces" bundle to save additional 15%  </p>
 
                     <div class = "giveawayInformation">
                         <p class = "informationTitle"> Discount code: </p>
-                        <p class = "informationText"> WEBSITELAUNCHCODE  </p>
+                        <p class = "informationText"> INSTACODE  </p>
                     </div>
                     <div class = "giveawayInformation">
                         <p class = "informationTitle"> Discount: </p>
-                        <p class = "informationText"> 10% </p>
+                        <p class = "informationText"> 15% </p>
                     </div>
                     <div class = "giveawayInformation">
                         <p class = "informationTitle"> Products: </p>
-                        <p class = "informationText"> all clockfaces </p>
+                        <p class = "informationText"> All Clockfaces bundle </p>
                     </div>
                     <div class = "giveawayInformation">
                         <p class = "informationTitle"> Max-uses: </p>
-                        <p class = "informationText"> 10 </p>
+                        <p class = "informationText"> / </p>
                     </div>
                     <div class = "giveawayInformation">
                             <p class = "informationTitle"> Expires: </p>
-                            <p class = "informationText"> / </p>
+                            <p class = "informationText"> 01/01/20 </p>
                     </div>
 
                     </div>
