--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class = "mainCardBundle">
 
-                <div class = "markedButton"> Save 37% </div>
+                <div class = "markedButton"> Save 45% </div>
 
                 <div class = "upperCard">
 
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (15+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (16+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -151,7 +151,7 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $16.99 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $17.99 </button></a>
 
                 </div>
             </div>
@@ -249,8 +249,6 @@
                 </div>
 
                 <div class = "mainCardBundle">
-
-                  <div class = "markedButton"> New </div>
 
                         <div class = "upperCard">
 
@@ -395,6 +393,35 @@
                     </div>
                 </div>
 
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
+                        <img class = "cardImage" src = "images/palmScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Palm </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
                 <div class = "mainCard">
 
                     <div class = "markedButton"> New </div>
@@ -450,9 +477,9 @@
                         </div>
                     </div>
 
-                    <div class = "mainCardSoon">
+                    <div class = "mainCard">
 
-                            <div class = "markedButton"> Soon </div>
+                            <div class = "markedButton"> New </div>
 
                             <div class = "upperCard">
 
