--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class = "lowerCard">
 
-                    <h3 class = "cardTitle"> All clockfaces (16+) </h3>
+                    <h3 class = "cardTitle"> All clockfaces (17+) </h3>
 
                         <div class = "infoSection">
                           <div>
@@ -151,7 +151,7 @@
                       </div>
                         </div>
 
-                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $17.99 </button></a>
+                        <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3375" target = "_blank" draggable="false"><button class = "cardButton"> $18.49 </button></a>
 
                 </div>
             </div>
@@ -399,6 +399,35 @@
 
                     <div class = "upperCard">
 
+                        <img class = "cardImage" src = "images/camelScreen.jpg" draggable="false">
+
+                    </div>
+                    <div class = "lowerCard">
+
+                        <h3 class = "cardTitle"> Camel </h3>
+
+                        <div class = "infoSection">
+                          <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa 2 </div>
+                        </div>
+                        <div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Versa Lite </div>
+                        <div class = "cardInfo"> <i class="fas fa-check"></i> Ionic </div>
+                      </div>
+                        </div>
+
+                       <button class = "cardButton"> $1.99</button>
+
+                    </div>
+                </div>
+
+                <div class = "mainCardSoon">
+
+                    <div class = "markedButton"> Soon </div>
+
+                    <div class = "upperCard">
+
                         <img class = "cardImage" src = "images/palmScreen.jpg" draggable="false">
 
                     </div>
@@ -446,7 +475,7 @@
                       </div>
                         </div>
 
-                       <button class = "cardButton"> $1.99</button>
+                       <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3902" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                     </div>
                 </div>
@@ -501,7 +530,7 @@
                               </div>
                                 </div>
 
-                                <button class = "cardButton"> $1.99</button>
+                                <a href = "https://k-pay.io/code/?s=4C4F1129-FC50-3BE0-3CF9-7DBFB131797C&dsu=487897&p=3374-3963" target="_blank"><button class = "cardButton"> $1.99</button></a>
 
                             </div>
                         </div>
